Slight style changes to CardActionTray. Added images for the game boards, not implemented yet. Added BaseCard component for the cards, but not implemented yet.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/_components/Gameboard/_subcomponents/BoardRow/SpaceUnitsBoard",
+    "src/app/_components/Gameboard/_subcomponents/BoardRow/GroundUnitsBoard"
+  ],
   "exclude": ["node_modules"]
 }
