--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@mui/icons-material": "^6.1.2",
+		"@emotion/react": "^11.13.3",
+		"@emotion/styled": "^11.13.0",
+		"@mui/icons-material": "^6.1.4",
+		"@mui/material": "^6.1.4",
 		"next": "14.2.14",
 		"react": "^18",
 		"react-dom": "^18",
-		"react-icons": "^5.3.0"
+		"react-icons": "^5.3.0",
+		"socket.io-client": "^4.8.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
