--- a/package.json
+++ b/package.json
@@ -6,25 +6,35 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "eslint -c C:/Users/AMMay/source/repos/forceteki-client/eslint.config.mjs --quiet",
+		"lint-fix": "eslint --quiet --fix",
+		"lint-verbose": "eslint"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
+		"@eslint/eslintrc": "^3.1.0",
+		"@eslint/js": "^9.8.0",
 		"@mui/icons-material": "^6.1.4",
 		"@mui/material": "^6.1.4",
+		"@next/eslint-plugin-next": "^15.0.2",
+		"@stylistic/eslint-plugin": "^2.9.0",
+		"@types/eslint__js": "^8.42.3",
+		"eslint": "^9.14.0",
+		"eslint-config-next": "^15.0.2",
+		"eslint-plugin-import": "^2.31.0",
 		"next": "14.2.14",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
-		"socket.io-client": "^4.8.0"
+		"socket.io-client": "^4.8.0",
+		"typescript-eslint": "^8.0.1"
 	},
 	"devDependencies": {
+		"@eslint/compat": "^1.2.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"eslint": "^8",
-		"eslint-config-next": "14.2.14",
-		"typescript": "^5"
+		"typescript": "^5.5.4"
 	}
 }
