--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@mui/icons-material": "^6.1.4",
-		"@mui/material": "^6.1.4",
-		"next": "14.2.14",
+		"@mui/material": "^6.1.6",
+		"@mui/styles": "^6.1.6",
+		"next": "^15.0.2",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
