--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
 		"@mui/icons-material": "^6.1.4",
 		"@mui/material": "^6.1.6",
 		"@mui/styles": "^6.1.6",
+		"@radix-ui/colors": "^3.0.0",
+		"@radix-ui/react-checkbox": "^1.1.2",
+		"@radix-ui/react-icons": "^1.3.1",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-select": "^2.1.2",
+		"classnames": "^2.5.1",
 		"next": "^15.0.2",
 		"react": "^18",
 		"react-dom": "^18",
@@ -21,6 +28,7 @@
 		"socket.io-client": "^4.8.0"
 	},
 	"devDependencies": {
+		"@types/classnames": "^2.3.4",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
