--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "npx tsc --noemit && next lint"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
-		"@mui/icons-material": "^6.1.4",
-		"@mui/material": "^6.1.4",
+		"@mui/icons-material": "^6.1.7",
+		"@mui/material": "^6.1.7",
 		"next": "14.2.14",
 		"react": "^18",
 		"react-dom": "^18",
