--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/styled": "^11.13.5",
 		"@mui/icons-material": "^6.1.8",
 		"@mui/material": "^6.1.8",
+		"html-react-parser": "^5.1.18",
 		"next": "14.2.14",
 		"react": "^18",
 		"react-dom": "^18",
