--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@mui/material": "^6.1.8",
 		"html-react-parser": "^5.1.18",
 		"next": "14.2.14",
+		"next-auth": "^4.24.10",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
