--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "forceteki-client",
 	"version": "0.1.0",
 	"private": true,
+	"type": "commonjs",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
@@ -14,7 +15,7 @@
 		"@mui/icons-material": "^6.1.8",
 		"@mui/material": "^6.1.8",
 		"html-react-parser": "^5.1.18",
-		"next": "14.2.14",
+		"next": "14.2.22",
 		"next-auth": "^4.24.10",
 		"react": "^18",
 		"react-dom": "^18",
@@ -22,11 +23,13 @@
 		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
+		"@stylistic/eslint-plugin": "^2.12.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.14",
+		"eslint-plugin-next": "^0.0.0",
 		"typescript": "^5"
 	}
 }
