--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_API_URL=http://localhost:9500/api
-NEXT_PUBLIC_WS_URL=ws://localhost:9500/ws
+NEXT_PUBLIC_ROOT_URL=http://localhost:9500
