--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
-		"socket.io-client": "^4.8.1"
+		"socket.io-client": "^4.8.1",
+		"uuid": "^11.0.5"
 	},
 	"devDependencies": {
 		"@stylistic/eslint-plugin": "^2.12.1",
