--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
 		"start": "next start",
 		"lint": "npx tsc --noemit && next lint"
 	},
+	"browser": {
+		"fs": false,
+		"path": false,
+		"os": false
+	},
 	"dependencies": {
+		"@aws-sdk/client-secrets-manager": "^3.797.0",
 		"@emotion/react": "^11.13.5",
 		"@emotion/styled": "^11.13.5",
 		"@mui/icons-material": "^6.1.8",
