Added the breakpoint panel back in as a local.dev environment variable

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,3 +7,6 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Other custom settings
 # NEXT_PUBLIC_DISABLE_LOCAL_QUICK_MATCH=true
+
+# Set to true to display the BreakpointOverlay for responsive design debugging
+# NEXT_PUBLIC_SHOW_BREAKPOINT_OVERLAY=true
