Updated the local exmaple

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,8 @@
 NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Other custom settings
+
+# Disables the quick match panel for local testing -- its harder to see 3 panels on small screens, we can skip this one
 # NEXT_PUBLIC_DISABLE_LOCAL_QUICK_MATCH=true
 
 # Set to true to display the BreakpointOverlay for responsive design debugging
