Added a debug flag for turning on dashed borders on all containers for scaling debugging

--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,6 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Set to true to display the BreakpointOverlay for responsive design debugging
 # NEXT_PUBLIC_SHOW_BREAKPOINT_OVERLAY=true
+
+# Set to true to display debug borders
+# NEXT_PUBLIC_DEBUG_BORDERS=true
