A big pile of changes.

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,3 +15,6 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Set to true to display debug borders
 # NEXT_PUBLIC_DEBUG_BORDERS=true
+
+# Set to true to display detailed hand scaling debug info
+# NEXT_PUBLIC_DEBUG_HAND_SCALING=true
