--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
+		"simplebar-react": "^3.3.1",
 		"socket.io-client": "^4.8.1",
 		"uuid": "^11.0.5"
 	},
