--- a/.env.local.example
+++ b/.env.local.example
@@ -18,3 +18,19 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Set to true to display detailed hand scaling debug info
 # NEXT_PUBLIC_DEBUG_HAND_SCALING=true
+
+# AWS Configuration for S3 Cosmetics Storage
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+AWS_REGION=us-east-1
+AWS_S3_BUCKET_NAME=karabast-customization
+
+# DynamoDB Configuration (if different from S3 region)
+# AWS_DYNAMODB_REGION=us-east-1
+
+# Local S3 Configuration (for development with Adobe S3Mock)
+# Set USE_LOCAL_S3=true to use local S3-compatible storage instead of AWS S3
+# USE_LOCAL_S3=true
+# LOCAL_S3_ENDPOINT=http://localhost:9090
+# LOCAL_S3_ACCESS_KEY=accessKey1
+# LOCAL_S3_SECRET_KEY=verySecretKey1
