--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 		"lint": "npx tsc --noemit && next lint"
 	},
 	"dependencies": {
+		"@aws-sdk/client-dynamodb": "^3.917.0",
+		"@aws-sdk/client-s3": "^3.917.0",
+		"@aws-sdk/lib-dynamodb": "^3.917.0",
+		"@aws-sdk/s3-request-presigner": "^3.917.0",
 		"@emotion/react": "^11.13.5",
 		"@emotion/styled": "^11.13.5",
 		"@mui/icons-material": "^6.1.8",
