--- a/.env.local.example
+++ b/.env.local.example
@@ -25,9 +25,7 @@ AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 AWS_REGION=us-east-1
 AWS_S3_BUCKET_NAME=karabast-customization
 
-# DynamoDB Configuration (if different from S3 region)
-# AWS_DYNAMODB_REGION=us-east-1
-
+#NOTE: the following settings are for local development of Cosmetics storage and integraation with local DynamoDB and S3 mocks.
 # Local S3 Configuration (for development with Adobe S3Mock)
 # Set USE_LOCAL_S3=true to use local S3-compatible storage instead of AWS S3
 # USE_LOCAL_S3=true
