--- a/.env.local.example
+++ b/.env.local.example
@@ -20,10 +20,10 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 # NEXT_PUBLIC_DEBUG_HAND_SCALING=true
 
 # AWS Configuration for S3 Cosmetics Storage
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-AWS_REGION=us-east-1
-AWS_S3_BUCKET_NAME=karabast-customization
+CUSTOMIZATION_ACCESS_KEY_ID=your_aws_access_key_here
+CUSTOMIZATION_ACCESS_KEY=your_aws_secret_key_here
+REGION=us-east-1
+S3_BUCKET_NAME=karabast-customization
 
 #NOTE: the following settings are for local development of Cosmetics storage and integraation with local DynamoDB and S3 mocks.
 # Local S3 Configuration (for development with Adobe S3Mock)
