--- a/.env.local.example
+++ b/.env.local.example
@@ -18,3 +18,13 @@ NEXT_PUBLIC_ROOT_URL=http://your-local-ip:9500
 
 # Set to true to display detailed hand scaling debug info
 # NEXT_PUBLIC_DEBUG_HAND_SCALING=true
+
+# AWS Configuration for S3 Cosmetics Storage
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
+REGION=us-east-1
+
+#NOTE: the following settings are for local development of Cosmetics storage and integraation with local DynamoDB and S3 mocks.
+# Local S3 Configuration (for development with Adobe S3Mock)
+# Set USE_LOCAL_S3=true to use local S3-compatible storage instead of AWS S3
+# USE_LOCAL_S3=true
