--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@emotion/styled": "^11.13.5",
 		"@mui/icons-material": "^6.1.8",
 		"@mui/material": "^6.1.8",
+		"@svgr/webpack": "^8.1.0",
 		"html-react-parser": "^5.1.18",
 		"jsonwebtoken": "^9.0.2",
 		"next": "14.2.26",
