--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-icons": "^5.3.0",
 		"simplebar-react": "^3.3.1",
 		"socket.io-client": "^4.8.1",
+		"socket.io-json-parser": "^3.0.0",
 		"uuid": "^11.0.5"
 	},
 	"devDependencies": {
