--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "npx tsc --noemit && next lint"
+		"lint": "npx tsc --noemit && next lint",
+		"lint:fix": "npx tsc --noemit && next lint --fix"
 	},
 	"dependencies": {
 		"@aws-sdk/client-dynamodb": "^3.917.0",
