--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "npx tsc --noemit && next lint"
+		"lint": "npx tsc --noemit && next lint",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@aws-sdk/client-dynamodb": "^3.917.0",
@@ -32,13 +33,20 @@
 	},
 	"devDependencies": {
 		"@stylistic/eslint-plugin": "^2.12.1",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.1",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@vitejs/plugin-react": "^5.1.2",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.14",
 		"eslint-plugin-next": "^0.0.0",
-		"typescript": "^5"
+		"jsdom": "^27.4.0",
+		"typescript": "^5",
+		"vite-tsconfig-paths": "^6.0.3",
+		"vitest": "^4.0.16"
 	}
 }
